--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby build --prefix-paths && main -d public",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
@@ -31,6 +31,7 @@
     "sass": "^1.53.0"
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "prettier": "2.3.2"
   },
   "repository": {
